--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@types/morgan": "^1.9.4",
     "@types/node": "^18.11.18",
     "prisma": "^4.9.0",
-    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.4"
   }
 }
